test(LocalScanNotificationOrchestrationService): Add Tests for LocalScanNotificationOrchestrationService